--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul id="nav">
                     <li><a href="#services">Услуги</a></li>
 <!--                    <li><a href="#languages">Технологии</a></li>-->
-                    <li><a href="cost.html">Стоимость</a></li>
+<!--                    <li><a href="#cost">Стоимость</a></li>-->
                     <li><a href="#showcase">Связаться с нами</a></li>
                     <li><a href="#works">Работы</a></li>
                     <li><a href="#rules">Порядок работы</a></li>
@@ -83,52 +83,86 @@
                 <div class="services_list-grid">
                     <div class="service_items">
                         <div class="icon">
-                            <img src="images2/001.png" alt="">
+                            <img src="images_src/images2/001.png" alt="">
                         </div>
                         <h2>Дизайн</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                        Если вы хотите красивый и удобный сайт, повысить продажи, увеличить заказы - наши дизайнеры воплотят Ваши желания в реальность.
                     </div>
                     <div class="service_items">
                         <div class="icon">
-                            <img src="images2/002.png" alt="">
+                            <img src="images_src/images2/002.png" alt="">
                         </div>
                         <h2>Разработка</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                        Наши разработчики создатут для Вас профессиональный и эксклюзивный проект, используя современные технолгии.
                     </div>
+
                     <div class="service_items">
                         <div class="icon">
-                            <img src="images2/003.png" alt="">
-                        </div>
-                        <h2>SEO</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
-                    </div>
-                    <div class="service_items">
-                        <div class="icon">
-                            <img src="images2/004.png" alt="">
-                        </div>
-                        <h2>Маркетинг</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
-                    </div>
-                    <div class="service_items">
-                        <div class="icon">
-                            <img src="images2/005.png" alt="">
-                        </div>
-                        <h2>Разработка приложений</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
-                    </div>
-                    <div class="service_items">
-                        <div class="icon">
-                            <img src="images2/006.png" alt="">
+                            <img src="images_src/images2/006.png" alt="">
                         </div>
                         <h2>Доработка</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                        Если Ваш проект не закончен, Вам помогут наши специалисты - закончат сайт, добавят контент, исправят ошибки, обновят функционал в установленный срок.
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-<div class="works" id="rules">
+    <div id="rules">
+        <div class="container">
+            <div class="title">
+                <h1>Порядок работы</h1>
+            </div>
+
+            <div class="img-slider">
+                <div class="slide active">
+                    <img src="images_src/slider_photo/pexels-anna-shvets-3727510.jpg" alt="">
+                    <div class="info">
+                        <h2>1</h2>
+                        <p>Вы осталяете заявку на создание сайта-мы отвечаем на все вопросы</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images_src/slider_photo/pexels-fauxels-3183153.jpg" alt="">
+                    <div class="info">
+                        <h2>2</h2>
+                        <p>Мы составляем техническое задание, определяемся с дизайном</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images_src/slider_photo/pexels-fauxels-3184291.jpg" alt="">
+                    <div class="info">
+                        <h2>3</h2>
+                        <p>Заключаем договор и приступаем к работе над сайтом</p>
+                        <p>В процессе могут возникнуть вопросы, обсуждаем и дорабатываем, вносим изменения</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images_src/slider_photo/pexels-jill-wellington-40815.jpg" alt="">
+                    <div class="info">
+                        <h2>4</h2>
+                        <p>Мы создали сайт именно для Вас</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images_src/slider_photo/pexels-thisisengineering-3861972.jpg" alt="">
+                    <div class="info">
+                        <h2>5</h2>
+                        <p>Мы нацелены на долгосрочное сотрудничесвто, поэтому Вы всегда можете обратиться к нам за поддержкой</p>
+                    </div>
+                </div>
+                <div class="navigation">
+                    <div class="butn active"></div>
+                    <div class="butn"></div>
+                    <div class="butn"></div>
+                    <div class="butn"></div>
+                    <div class="butn"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="works" id="works">
     <div class="container">
         <div class="services_flex">
             <div class="title">
@@ -136,172 +170,113 @@
             </div>
             <div class="works_list-grid">
                 <div class="service_items">
-                    <a href="http://tekby.ru/"> <img src="works_photo/8.jpg" alt="" class="img-prjct-wrk"> </a>
+                    <a href="http://tekby.ru/"> <img src="works_photo/8.jpg" alt=""> </a>
                     <h2>Инженерная компания "Текби"</h2>
                     Усиление сотовой связи
                 </div>
                 <div class="service_items">
+                    <a href="https://mikhailbobrov.github.io/1093505-cat-energy-18/"> <img src="works_photo/18.jpg" alt=""></a>
+                    <h2>Cat Energy</h2>
+                    Функциональное питание для котов
+                </div>
 
-                    <h2>Разработка</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                <div class="service_items">
+                    <a href="https://nifty-roentgen-9d0bfc.netlify.app"> <img src="works_photo/28.jpg" alt=""> </a>
+                    <h2>Travel</h2>
+                    NEVER STOP TO EXPLORING THE WORLD
                 </div>
                 <div class="service_items">
-
-                    <h2>SEO</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                    <a href="https://mikhailbobrov.github.io/mytunes/"> <img src="works_photo/118.jpg" alt=""> </a>
+                    <h2>MyTunes</h2>
+                    Копия сайта Itunes
                 </div>
                 <div class="service_items">
-
-                    <h2>Маркетинг</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                    <a href="https://mikhailbobrov.github.io/english_school/"> <img src="works_photo/1118.jpg" alt=""> </a>
+                    <h2>CleverBaby</h2>
+                    Школа изучения английского языка
                 </div>
                 <div class="service_items">
-
-                    <h2>Разработка приложений</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                    <a href="https://mikhailbobrov.github.io/hotel/"> <img src="works_photo/11118.jpg" alt=""> </a>
+                    <h2>HBT</h2>
+                    About Hotel BT
                 </div>
                 <div class="service_items">
-
-                    <h2>Доработка</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum esse illo in laboriosam non obcaecati officia quaerat totam voluptas.
+                    <a href="https://mikhailbobrov.github.io/EdgeLedger/"> <img src="works_photo/111118.jpg" alt=""> </a>
+                    <h2>EdgeLedger</h2>
+                    Финансовая помощь мирового класса
                 </div>
+
+                <div class="service_items">
+                    <a href="https://mikhailbobrov.github.io/zapchasti/"> <img src="images_src/image_works/pexels-mÃ­dia-4116231.jpg" alt=""> </a>
+                    <h2>Каталог запчастей</h2>
+                   Запчасти на все виды автомобилей
+                </div>
+
             </div>
         </div>
     </div>
 </div>
 
-<div class="works" id="works">
-    <div class="container">
-        <div class="services_flex">
-            <div class="title">
-                <h1>Наши работы</h1>
-                <p>Создание сайтов под ключ – от разработки дизайна до наполнения страниц и технической поддержки. Сайты любой сложности с нуля, и доработка существующих с учетом актуальных потребностей вашего бизнеса.</p>
-            </div>
-            <div class="services_list-grid">
-                <div class="item">
-                    <img src="" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 
-<section id="languages" class="languages">
-    <h2 class="md text-center my-3">
-        Supported Languages
-    </h2>
-    <div class="container flex">
-        <div class="card">
-            <h4>Node.js</h4>
-            <img src="images/logos/node.png" alt="">
+
+    <section id="languages" class="languages">
+        <h2 class="md text-center my-3">
+            Supported Languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images_src/images/logos/node.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images_src/images/logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="images_src/images/logos/csharp.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="images_src/images/logos/ruby.png" alt="">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="images_src/images/logos/php.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="images_src/images/logos/scala.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="images_src/images/logos/clojure.png" alt="">
+            </div>
         </div>
-        <div class="card">
-            <h4>Python</h4>
-            <img src="images/logos/python.png" alt="">
-        </div>
-        <div class="card">
-            <h4>C#</h4>
-            <img src="images/logos/csharp.png" alt="">
-        </div>
-        <div class="card">
-            <h4>Ruby</h4>
-            <img src="images/logos/ruby.png" alt="">
-        </div>
-        <div class="card">
-            <h4>PHP</h4>
-            <img src="images/logos/php.png" alt="">
-        </div>
-        <div class="card">
-            <h4>Scala</h4>
-            <img src="images/logos/scala.png" alt="">
-        </div>
-        <div class="card">
-            <h4>Clojure</h4>
-            <img src="images/logos/clojure.png" alt="">
-        </div>
-    </div>
-</section>
+    </section>
 
 <!-- Footer -->
 <footer>
     <div class="container">
         <div class="footer-cols">
             <ul>
-                <li>Shop & Learn</li>
                 <li>
-                    <a href="#">Music</a>
+                    <p>Вы можете позвонить нам или написать в Whats app</p>
+                    <a href="tel:88007773325">8 (800) 777-33-25</a>
                 </li>
                 <li>
-                    <a href="#">Movies</a>
+                    <p>отправить сообщение на почту</p>
+                    <a href="mailto:info@mountain.ru">info@mountain.ru</a>
                 </li>
-                <li>
-                    <a href="#">Shows</a>
-                </li>
-                <li>
-                    <a href="#">Apps</a>
-                </li>
-                <li>
-                    <a href="#">Gift Cards</a>
-                </li>
+
             </ul>
 
-            <ul>
-                <li>Orange Store</li>
-                <li>
-                    <a href="#">Find a Store</a>
-                </li>
-                <li>
-                    <a href="#">Today at Orange</a>
-                </li>
-                <li>
-                    <a href="#">Orange Camp</a>
-                </li>
-                <li>
-                    <a href="#">Financing</a>
-                </li>
-                <li>
-                    <a href="#">Order Status</a>
-                </li>
-            </ul>
+            <p class="price" id="cost">
+                Стоимость наших услуг динамическая, зависит от конкретной задачи.
+            </p>
 
-            <ul>
-                <li>Education & Business</li>
-                <li>
-                    <a href="#">Orange & Education</a>
-                </li>
-                <li>
-                    <a href="#">Shop For College</a>
-                </li>
-                <li>
-                    <a href="#">Orange & Business</a>
-                </li>
-                <li>
-                    <a href="#">Shop For Business</a>
-                </li>
-                <li>
-                    <a href="#">Jobs</a>
-                </li>
-            </ul>
 
-            <ul>
-                <li>About Orange</li>
-                <li>
-                    <a href="#">Newsroom</a>
-                </li>
-                <li>
-                    <a href="#">Orange Leadership</a>
-                </li>
-                <li>
-                    <a href="#">Investors</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">Contact Orange</a>
-                </li>
-            </ul>
 
         </div>
     </div>
@@ -312,9 +287,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script src="smooth_scrolling.js"></script>
-    <script src="navigation.js"></script>
-    <script src="type_effect.js"></script>
-    <script src="burger.js"></script>
+    <script src="js/slider.js"></script>
+<script src="js/slider-2.js"></script>
+    <script src="js/smooth_scrolling.js"></script>
+    <script src="js/navigation.js"></script>
+    <script src="js/type_effect.js"></script>
+    <script src="js/burger.js"></script>
 </body>
 </html>
