--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!--                    <li><a href="#cost">Стоимость</a></li>-->
                     <li><a href="#showcase">Связаться с нами</a></li>
                     <li><a href="#works">Работы</a></li>
-                    <li><a href="#rules">Порядок работы</a></li>
+<!--                    <li><a href="#rules">Порядок работы</a></li>-->
                 </ul>
             </nav>
         </div>
@@ -51,7 +51,7 @@
             <div class="showcase-text">
                 <h1>Разработка<span class="txt-type" data-wait="3000" data-words='["лендингов", "порталов", "на Ваш вкус"]'></span></h1>
                 <p>Вы хотите создать свой собственный сайт, но не решаетесь сделать это или не знаете, с чего начать? Быть храбрым! В наши дни создать веб-сайт намного проще, чем несколько лет назад.</p>
-                <a href="contact.html" class="btn btn-outline">Узнать больше</a>
+                <a href="#rules" class="btn btn-outline">Узнать больше</a>
             </div>
 
             <div class="showcase-form card">
@@ -263,11 +263,11 @@
             <ul>
                 <li>
                     <p>Вы можете позвонить нам или написать в Whats app</p>
-                    <a href="tel:88007773325">8 (800) 777-33-25</a>
+                    <a href="tel:89221772288">8-922-177-22-88</a>
                 </li>
                 <li>
                     <p>отправить сообщение на почту</p>
-                    <a href="mailto:info@mountain.ru">info@mountain.ru</a>
+                    <a href="mailto:mg-it-2021@yandex.ru">mg-it-2021@yandex.ru</a>
                 </li>
 
             </ul>
