--- a/index.html
+++ b/index.html
@@ -289,10 +289,11 @@
     </div>
 </footer>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>-->
 
-    <script src="js/slider.js"></script>
-<script src="js/slider-2.js"></script>
+<!--    <script src="js/slider.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="js/slider-2.js"></script>
     <script src="js/smooth_scrolling.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/type_effect.js"></script>
